--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,10 +4,11 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
     <com.cyd.pagertab.TabLayout
-        android:id="@+id/container"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:background="@android:color/white">
+    android:id="@+id/container"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    android:background="@android:color/white"
+        >
 
         <TextView
             android:id="@+id/tab1"
