--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tab = "http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -8,6 +9,13 @@
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:background="@android:color/white"
+
+        tab:child_count="4"
+        tab:block_height="8dp"
+        tab:alphabg_color="@color/button_material_dark"
+        tab:block_color="@color/material_deep_teal_500"
+        tab:outline_color="@color/material_blue_grey_800"
+        tab:mode="Block"
         >
 
         <TextView
